# core-synapse-ui

./: Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build-push-images.yml
scripts/: build.sh
src/: config.py  log.py  svc.py
static/: styles.css
templates/: api_response.html  index.html  model.html
